this is messed up

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"functionHeaderExtension.headerFilePath": "/Users/tamehri/Desktop/Cub4d/include/cub3d.h",
+	"functionHeaderExtension.headerFilePath": "/Users/tamehri/Desktop/Cub4d Vect/include/cub3d.h",
 	"files.associations": {
 		"mlx.h": "c",
 		"stdio.h": "c",
