--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,9 @@
 		"unordered_map": "c",
 		"vector": "c",
 		"cub3d.h": "c",
-		"algorithm": "c"
+		"algorithm": "c",
+		"i": "c",
+		"locale": "c"
 	},
 	"workbench.colorCustomizations": {
         "terminal.foreground": "#fdfdfd",
